Fix jumping player names

--- a/src/bismarck-web/src/index.css
+++ b/src/bismarck-web/src/index.css
@@ -117,6 +117,7 @@ label {
   -webkit-user-select: none;
   -moz-user-select: none;
   user-select: none;
+  overflow: auto;
 }
 
 .card > .suit {
